# eyeguard-svn-to-git

trunk/: ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac  setting.eg  护眼提示.xmind
trunk/Debug/: Makefile  config.h  config.status  libtool
trunk/Debug/po/: Makefile  Makefile.in  POTFILES
trunk/Debug/src/: Makefile  eyeguard
trunk/Debug/src/.deps/: EgAbout.Po  EgSetting.Po  main.Po
trunk/autom4te.cache/: output.0  output.1  traces.0  traces.1
trunk/src/: EgAbout.c  EgSetting.c  EgSetting.h  Makefile.am  Makefile.in  eyeguard.h  main.c
